# stellar-wrap-contract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY_RECOMMENDATIONS.md  test_results.txt
.github/workflows/: ci.yml
src/: lib.rs  security_test.rs  storage_types.rs  test.rs
test_snapshots/test/: test_bad_signature_fails.1.json  test_duplicate_period_fails.1.json  test_initialize_twice_fails.1.json  test_mint_emits_event.1.json  test_mint_wrap_unauthorized.1.json  test_minting_flow.1.json  test_multiple_periods.1.json
