[package]
name = "stellar_wrap_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = "21.7.1"

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1